--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     
                 
 
-    <link href="css/StyleSheet1.css" rel="stylesheet" /></head>
+    <link href="/css/StyleSheet1.css" rel="stylesheet" /></head>
 <body>
     <form method="post" action="./MaximalistPeopleSearchApi" id="ctl01">
 <div class="aspNetHidden">
