--- a/index.html
+++ b/index.html
@@ -622,10 +622,10 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl34', 'ctl01', [], [], [], 
             <table class="text-center psa-aeaa">
       <thead>
           <tr>
-          <th>AVG Match Rate</th>
-          <th>Expected Hits</th>
-          <th>AVG Match Rate</th>
-          <th>AVG Match Rate</th>
+          <th class="text-center">AVG Match Rate</th>
+<th class="text-center">Expected Hits</th>
+<th class="text-center">AVG Match Rate</th>
+<th class="text-center">AVG Match Rate</th>
            </tr>
       </thead>         
 
