--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl34', 'ctl01', [], [], [], 
         alt="Alternate Text"
         width="400" data-aos="fade-left" data-aos-duration="1500" data-aos-easing="ease-in-sine"data-aos-once="true"
           />
-      <h1 class="clr-orange">PEOPLE SEARCH APIS:</h1>
+      <h1 class="clr-orange">PEOPLE SEARCH APIs:</h1>
       <h2 class="clr-text-color-1">
         Find Contact Information <br />
         For People and Business</h2>
