--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl34', 'ctl01', [], [], [], 
     <div class="container">
               <img
         src="https://dilsondecano.github.io/people-search-api/images/people-search-api.png" class="psa-people-search-api-hero-mobile img-fluid"
-        alt="Alternate Text"
+        alt="People Search API"
         width="400" data-aos="fade-left" data-aos-duration="1500" data-aos-easing="ease-in-sine"data-aos-once="true"
           />
       <h1 class="clr-orange">PEOPLE SEARCH APIs:</h1>
