--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl34', 'ctl01', [], [], [], 
         <div class="psa-carousel-card">
         
         <div>
-        <img src="https://dilsondecano.github.io/people-search-api/images/api-cloud.png" class="img-fluid">
+        <img src="https://dilsondecano.github.io/people-search-api/images/api-cloud.png" alt="API Cloud" class="img-fluid">
         <h2>Find Phone Number</h2>
             </div>
             <p>This API makes it easy to get to phone numbers from street address, email address, name and address, name and city/state or name and state.</p>
@@ -501,7 +501,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl34', 'ctl01', [], [], [], 
    
       <div class="psa-carousel-card">
 <div>
-<img src="https://dilsondecano.github.io/people-search-api/images/api-cloud.png" class="img-fluid">
+<img src="https://dilsondecano.github.io/people-search-api/images/api-cloud.png" alt="API Cloud" class="img-fluid">
 <h2>Find Name and Address</h2>
     </div>
           <p>Our property data API is ideal for businesses needing the current contact information, such as the name and phone number of the current owner the property.</p>
@@ -511,7 +511,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl34', 'ctl01', [], [], [], 
      
     <div class="psa-carousel-card">
 <div>
-<img src="https://dilsondecano.github.io/people-search-api/images/api-cloud.png" class="img-fluid">
+<img src="https://dilsondecano.github.io/people-search-api/images/api-cloud.png" alt="API Cloud" class="img-fluid">
 <h2>Find <br />Email Address</h2>
     </div>
         <p>Search by phone number, street address, name and address, name and city/state, name and state, or even just a name.</p>
@@ -520,7 +520,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl34', 'ctl01', [], [], [], 
    
     <div class="psa-carousel-card">
 <div>
-<img src="https://dilsondecano.github.io/people-search-api/images/api-cloud.png" class="img-fluid">
+<img src="https://dilsondecano.github.io/people-search-api/images/api-cloud.png" alt="API Cloud" class="img-fluid">
 <h2>Find Property <br />Records</h2>
     </div>
         <p>This API enables you to identify, enhance, and update your database making customer records and sales leads more valuable.</p>
