--- a/index.html
+++ b/index.html
@@ -534,9 +534,9 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl34', 'ctl01', [], [], [], 
                                 <div>
                                     <div class="font-weight-bold">Records per month</div>
                                     <div class="psa-xml-json-mobile"><a
-                                            href="https://www.searchbug.comhttps://dilsondecano.github.io/people-search-api/images/api_ppl_short.gif"
+                                            href="https://www.searchbug.com/images/api_ppl_short.gif"
                                             target="_blank">XML</a> <span class="psa-xml-json-mobile">|</span> <a
-                                            href="https://www.searchbug.comhttps://dilsondecano.github.io/people-search-api/images/api_ppl_json_short.gif"
+                                            href="https://www.searchbug.com/images/api_ppl_json_short.gif"
                                             target="_blank">JSON</a></div>
                                 </div>
                             </div>
@@ -544,9 +544,9 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl34', 'ctl01', [], [], [], 
                                 class="btn-orange mt-4 d-none d-sm-inline-block">Estimate</button>
                         </div>
                         <div class="mt-4 text-center d-none d-sm-block">
-                            <a href="https://www.searchbug.comhttps://dilsondecano.github.io/people-search-api/images/api_ppl_short.gif" target="_blank">XML</a> <span
+                            <a href="https://www.searchbug.com/images/api_ppl_short.gif" target="_blank">XML</a> <span
                                 class="psa-xml-json">|</span> <a
-                                href="https://www.searchbug.comhttps://dilsondecano.github.io/people-search-api/images/api_ppl_json_short.gif" target="_blank">JSON</a>
+                                href="https://www.searchbug.com/images/api_ppl_json_short.gif" target="_blank">JSON</a>
                         </div>
                     </div>
                     <div class="col-0 order-sm-2 order-3">
