--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <html lang="en">
 <head><meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>
-	Maximalist People Search API - My ASP.NET Applicateion
+		People Search APIs: Find Contact Information for People and Businesses
+
 </title><script src="/Scripts/modernizr-2.8.3.js"></script>
 <link href="https://dilsondecano.github.io/people-search-api/Content/bootstrap.css" rel="stylesheet"/>
 <link href="https://dilsondecano.github.io/people-search-api/Content/Site.css" rel="stylesheet"/>
@@ -14,6 +15,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="https://www.searchbug.com/css/bootstrap.min.css" /><link rel="stylesheet" href="https://www.searchbug.com/css/app2.css" />
+	<meta name="description" content="Integrate into your system: APIs to find phone, email and address for people and businesses. Reverse phone, email and address APIs. XML and JSON formats." />
 
     <!-- Open Graph data -->
 <meta property="og:locale" content="en_US" /><meta property="og:type" content="website" /><meta property="og:title" content="Search People, Identify and Find Phone Numbers, Property Addresses, and Email Address." /><meta property="og:description" content="Searchbug, a professional and true people search. Find names, phone numbers, property addresses, &amp; email addresses. First people search free plus 500 bonus $earch Tokens. Instant results, batch files, API, and professional assisted searches." /><meta property="og:url" content="https://www.searchbug.com" /><meta property="og:image" content="https://www.searchbug.com/images/og/search-people-verify-append-name-address-phone-email.png" />
