--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl34', 'ctl01', [], [], [], 
         </section>
 
         <!-- How do I get access to APIs? Section -->
-        <section id="psa-faq" class="padding-tb-75">
+        <section id="psa-faq" class="padding-tb-75 mt-4">
             <div class="container" data-aos="fade" data-aos-duration="500" data-aos-easing="ease-in-sine"
                 data-aos-once="true">
                 <div>
