--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl34', 'ctl01', [], [], [], 
                         PROBLEMS YOU MIGHT BE FACING
                     </h3>
                     <div class="text-center">
-                        <button class="btn-orange mt-4">Get me a quote</button>
+                        <button class="btn-orange mt-4" onclick="window.location.href='https://www.searchbug.com/contact-us.aspx';" type="button">Get me a quote</button>
                     </div>
                 </div>
             </div>
