--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl34', 'ctl01', [], [], [], 
                         data-aos-once="true">
                         <h2>NOT A DEVELOPER?</h2>
                         <h3>Use our Batch Append Tool</h3>
-                        <button class="btn-orange mt-4">Try Now</button>
+                        <button class="btn-orange mt-4" onclick="window.location.href='https://www.searchbug.com/batch/phone-name-address-email-append.aspx';" type="button">Try Now</button>
                     </div>
                 </div>
             </div>
