--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl34', 'ctl01', [], [], [], 
                                 found.</strong></p>
                         <p>The rate automatically goes down as your monthly volume increases. The price resets on the
                             1st of each month.</p>
-                        <button class="btn-orange mt-4">Estimate</button> <button class="btn-gray mt-4">View API
+                        <button class="btn-orange mt-4" onclick="window.location.href='#psa-estimate-cost';" type="button">Estimate</button> <button class="btn-gray mt-4">View API
                             documentation</button>
                     </div>
                 </div>
@@ -770,7 +770,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl34', 'ctl01', [], [], [], 
                                 found.</strong></p>
                         <p>The rate automatically goes down as your monthly volume increases. The price resets on the
                             1st of each month.</p>
-                        <button class="btn-orange mt-4">Estimate</button> <button class="btn-gray mt-4">View API
+                        <button class="btn-orange mt-4" onclick="window.location.href='#psa-estimate-cost';" type="button">Estimate</button> <button class="btn-gray mt-4">View API
                             documentation</button>
                     </div>
                 </div>
@@ -792,7 +792,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl34', 'ctl01', [], [], [], 
                                 found.</strong></p>
                         <p>The rate automatically goes down as your monthly volume increases. The price resets on the
                             1st of each month.</p>
-                        <button class="btn-orange mt-4">Estimate</button> <button class="btn-gray mt-4">View API
+                        <button class="btn-orange mt-4" onclick="window.location.href='#psa-estimate-cost';" type="button">Estimate</button> <button class="btn-gray mt-4">View API
                             documentation</button>
                     </div>
                 </div>
@@ -822,7 +822,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl34', 'ctl01', [], [], [], 
                         <p>Cost is $0.20 to $0.50 per hit, depending on volume. No charge, if data not found.</p>
                         <p>The rate automatically goes down as your monthly volume increases. The price resets on the
                             1st of each month.</p>
-                        <button class="btn-orange mt-4">Estimate</button> <button class="btn-gray mt-4">View API
+                        <button class="btn-orange mt-4" onclick="window.location.href='#psa-estimate-cost';" type="button">Estimate</button> <button class="btn-gray mt-4">View API
                             documentation</button>
                     </div>
                 </div>
